--- a/index.html
+++ b/index.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CALCULATOR</title>
 </head>
 <body>
     <div class="calc">
-        <button class="span">AC</button>
-        <button>DEL</button>
-        <button>&#247;</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>&#215;</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>-</button>
-        <button>.</button>
-        <button>0</button>
-        <button class="span">=</button>
+
+        <div class="output-screen">
+            <div class="previous">232</div>
+            <div class="current">18.16</div>
+            <div></div>
+        </div>
+
+        <button class="span clear">AC</button>
+        <button class="delete">DEL</button>
+        <button class="operation">&#247;</button>
+        <button class="num">1</button>
+        <button class="num">2</button>
+        <button class="num">3</button>
+        <button class="operation">&#215;</button>
+        <button class="num">4</button>
+        <button class="num">5</button>
+        <button class="num">6</button>
+        <button class="operation">+</button>
+        <button class="num">7</button>
+        <button class="num">8</button>
+        <button class="num">9</button>
+        <button class="operation">-</button>
+        <button class="num">.</button>
+        <button class="num">0</button>
+        <button class="span equals">=</button>
     </div>
    
     <script src="app.js"></script>
