--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
         <button class="span clear">AC</button>
         <button class="delete">DEL</button>
-        <button class="operation">&#247;</button>
+        <button class="operation">÷</button>
         <button class="num">1</button>
         <button class="num">2</button>
         <button class="num">3</button>
-        <button class="operation">&#215;</button>
+        <button class="operation">*</button>
         <button class="num">4</button>
         <button class="num">5</button>
         <button class="num">6</button>
