--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="calc">
 
         <div class="output-screen">
-            <div class="previous">232</div>
-            <div class="current">18.16</div>
+            <div class="previous"></div>
+            <div class="current">0</div>
             <div></div>
         </div>
 
