--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
     <title>CALCULATOR</title>
 </head>
 <body>
+    
     <div class="calc">
-
-        <div class="output-screen">
-            <div class="previous"></div>
-            <div class="current">0</div>
-            <div></div>
-        </div>
-
-        <button class="span clear">AC</button>
-        <button class="delete">DEL</button>
-        <button class="operation">÷</button>
-        <button class="num">1</button>
-        <button class="num">2</button>
-        <button class="num">3</button>
-        <button class="operation">*</button>
-        <button class="num">4</button>
-        <button class="num">5</button>
-        <button class="num">6</button>
-        <button class="operation">+</button>
-        <button class="num">7</button>
-        <button class="num">8</button>
-        <button class="num">9</button>
-        <button class="operation">-</button>
-        <button class="num">.</button>
-        <button class="num">0</button>
-        <button class="span equals">=</button>
+       <div class="container">
+            <div class="output-screen">
+                <div class="previous"></div>
+                <div class="current">0</div>
+            </div>
+           
+            <button class="span clear">AC</button>
+            <button class="delete">DEL</button>
+            <button class="operation">÷</button>
+            <button class="num">1</button>
+            <button class="num">2</button>
+            <button class="num">3</button>
+            <button class="operation">*</button>
+            <button class="num">4</button>
+            <button class="num">5</button>
+            <button class="num">6</button>
+            <button class="operation">+</button>
+            <button class="num">7</button>
+            <button class="num">8</button>
+            <button class="num">9</button>
+            <button class="operation">-</button>
+            <button class="num">.</button>
+            <button class="num">0</button>
+            <button class="span equals">=</button>
+       </div>
     </div>
    
     <script src="app.js"></script>
